--- a/pages/surgery/important.scss
+++ b/pages/surgery/important.scss
@@ -2,9 +2,7 @@
 @import '../../app/scss/mixins';
 @import '../../app/scss/fonts';
 
-.gynecology-planned {
-    background-color: $white;
-    padding: 40px 0 80px;
+.surgery-important {
     min-height: 60vh;
     
     .container {
@@ -13,11 +11,11 @@
         padding: 0 20px;
     }
 
-    // Main Header Section
+    // Main Header Section with beige background
     &__main-header {
+        background-color: $white; // #FFF9F0
+        padding: 40px 0 60px;
         text-align: left;
-        margin-bottom: 60px;
-        padding-top: 20px;
         
         [dir="rtl"] & {
             text-align: right;
@@ -52,20 +50,20 @@
         }
     }
 
-    // Section Styling
+    // Section Styling with different backgrounds
     &__section {
         padding: 60px 0;
         
-        &:first-of-type {
-            background-color: $white-full;
+        &--white {
+            background-color: $white-full; // #ffffff
         }
         
-        &:nth-of-type(2) {
-            background-color: $grey-3;
+        &--grey {
+            background-color: $grey-3; // #F6F6F6
         }
         
-        &:nth-of-type(3) {
-            background-color: $white-full;
+        &--beige {
+            background-color: $white; // #FFF9F0
         }
         
         @media (max-width: 768px) {
@@ -137,9 +135,9 @@
         }
     }
 
-    // Item Cards
+    // Item Cards with rose gradient
     &__item {
-        background: $gradient-rose;
+        background: $gradient-rose; // linear-gradient(90deg, #FFF9F0 0%, #FFC0A6 100%)
         border-radius: 12px;
         padding: 30px 25px;
         transition: all 0.3s ease;
@@ -175,11 +173,11 @@
         line-height: 1.3;
         font-size: 1.1rem;
         font-weight: 600;
-        
+
         @media (max-width: 768px) {
             font-size: 1rem;
         }
-        
+
         @media (max-width: 480px) {
             font-size: 0.95rem;
         }
@@ -207,22 +205,20 @@
 
     // RTL Support
     &[dir="rtl"] {
-        .gynecology-planned__main-title,
-        .gynecology-planned__section-title {
+        .surgery-important__main-title,
+        .surgery-important__section-title {
             text-align: right;
         }
         
-        .gynecology-planned__item-title {
+        .surgery-important__item-title {
             text-align: center;
         }
     }
 
     // Mobile Styles
     @media (max-width: 768px) {
-        padding: 30px 0 60px;
-        
         &__main-header {
-            margin-bottom: 40px;
+            padding: 30px 0 40px;
         }
     }
 }
