--- a/shared/footer-menu-soc/footer-menu-soc.scss
+++ b/shared/footer-menu-soc/footer-menu-soc.scss
@@ -10,5 +10,11 @@
     
     &__item {
         @include social-button;
+        
+        &--disabled {
+            pointer-events: none;
+            opacity: 0.7;
+            cursor: default !important;
+        }
     }
 }
