Added block Consultation

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -9,11 +9,13 @@ $grey-3: #F6F6F6;
 $rose: #FFDCCD;
 $gradient-rose: linear-gradient(90deg, #FFF9F0 0%, #FFC0A6 100%);
 $gradient-blue: linear-gradient(90deg, #FFFFFF 0%, #8181DA 60%, #0303B5 100%);
+$gradient-yellow: linear-gradient(90deg, #FFF9F0 0%, #517db2 100%);
 
 
 
 
 $grey-4: #a7a7a7;
+$yellow: #d6b600;
 $Logo-1: #821936;
 $Logo-2: #1D1D6D;
 $grey-7: #eaeaea;
