--- a/widgets/main-consultation/main-consultation.scss
+++ b/widgets/main-consultation/main-consultation.scss
@@ -83,7 +83,7 @@
     
     &__item-title {
         @include title-h4;
-        color: $primary;
+        color: $black;
         margin-bottom: 12px;
         flex-shrink: 0;
         line-height: 1.2;
